# Epicourier-Web

./: 5-NEW-ISSUES-COMPLETION-SUMMARY.md  5-PR-SUMMARY.md  BUGFIX-SUMMARY.md  CONTRIBUTE.md  CREATE-PR-107-GUIDE.md  DATA-DOCUMENTATION-SUMMARY.txt  DATA-PIPELINE-GUIDE.md  DATA-PIPELINE-OVERVIEW.txt  FIX-SUMMARY.md  INSTALL.md  PR-PUSH-SUMMARY.md  PR-STATUS-BOTH-REPOS.md  PR-VERIFICATION-CHECKLIST.md  README.md  TEAM-SYNC-SUMMARY.md  create-all-prs.sh
.github/workflows/: ci-jest.yml  e2e.yml
AGENT-PLAN/: 00-QUICK-START.md  04-DATABASE-DESIGN.md  07-TESTING-STRATEGY.md  08-SPRINT-TASKS.md
backend/: Makefile  create_sample_recipes.py  disable_rls.sql  import_data.py  import_data.sh  import_data_postgres.py  insert_recipes_admin.py  pyproject.toml
backend/api/: index.py  inventory_recommender.py  recommender.py
backend/tests/: conftest.py  test_inventory_recommend.py  test_inventory_recommender.py
data/: ARCHITECTURE.md  CHECKLIST.txt  QUICK-START.md  README-CN.md  build_dataset.sh
supabase/migrations/: 20251129020000_shopping_list_items.sql  20251129030000_user_inventory.sql
supabase/seed/: inventory_seed.sql  inventory_seed_simple.sql
web/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
web/__tests__/jsdom/: ChallengeCard.test.tsx  PushNotifications.test.tsx  RecipeRecommendationModal.test.tsx  SmartCartWidget.test.tsx  (+2 more)
web/e2e/: ai-recommendations.spec.ts  cross-feature-integration.spec.ts  fixtures.ts  inventory-management.spec.ts  shopping-list-lifecycle.spec.ts  transfer-flow.spec.ts
web/scripts/: seed-inventory.ts
(+85 files in other folders)
